# lizard-lizard-lizard

./: .gitignore  BUILD.md  CMakeLists.txt  EXAMPLE_game_screen_integration.c  README.md  build-macos.sh  build-windows-native.bat  build-windows.sh  build.sh  build_web.sh  configure_cmake.sh  create-release.sh  serve_web.sh  test-windows-build.sh
.cache/clangd/index/: cursorManager.c.508FBE68128E3388.idx  cursorManager.h.3A1B23AF4DC4FB28.idx  definitions.h.40AF71312F7A463F.idx  entityManager.c.D0D73701FB914753.idx  entityManager.h.E8778BB8AE1D41C8.idx  game_screen.c.FFEF6B9A06907670.idx  graphicsManager.c.95F82E8E47092143.idx  graphicsManager.h.31E25094D9E47B14.idx  inputManager.c.B41DAA2B06D07B61.idx  inputManager.h.87F24EC61C530DC5.idx  main.c.031E9BD434A2E5B3.idx  main_menu_screen.c.8B762B1B3B233356.idx  player.c.8EAF94F48F3236F4.idx  player.h.7AF46184E1AD8EBE.idx  randomizer.c.A70177F6DAA8F9AB.idx  randomizer.h.8546CA0203608A86.idx  raygui.h.912BE73DA24B4CDA.idx  screens.h.35404701D3449B56.idx  soundManager.c.4A34ABCF54F00CFA.idx  soundManager.h.AD1F05C2C514CAA7.idx  splash_screen.c.77A0751B917FF5A2.idx
.github/workflows/: build.yml
build_web/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  index.html  lizard_meme.data  lizard_meme.js  lizard_meme.wasm
cmake/: toolchain-macos.cmake  toolchain-mingw64.cmake
docs/: MACOS_BUILD.md  RELEASES.md
include/: cursorManager.h  definitions.h  entityManager.h  graphicsManager.h  inputManager.h  lizard_sound.h  lizard_sound_down_shift.h  lizard_sound_up_shift.h  lizard_sprite.h  mouse_sprite.h  pause_sprite.h  player.h  randomizer.h  raygui_style_cyber.h  saw_sprite.h  screens.h  shader_flash_fs.h  shader_flash_vs.h  sound.h  soundManager.h  web_cursor.h
res/: animationSpritesheet.png~  pause.png-autosave.kra
res/shaders/: flash.fs  flash.vs
src/: cursorManager.c  entityManager.c  game_screen.c  graphicsManager.c  inputManager.c  main.c  main_menu_screen.c  player.c  randomizer.c  sound.c  soundManager.c  splash_screen.c  web_cursor.c
web/: shell.html
